# libconf

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
data/: LibConfConfig.cmake.in
include/: libconf.h
src/: conf.c  internal.h  lex.c  libconf_config.in.h  parse.c
src/tests/: lex.c  parse.c  testLex.testxt
